core_services.yaml
# Auth Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth-app
        image: auth-app:v1
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - port: 80
    targetPort: 80

---

# Product Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product-app
        image: product-app:v1
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: product-svc
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
  - port: 80
    targetPort: 80

---
# Order Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order-app
        image: order-app:v1
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
  - port: 80
    targetPort: 80
