inventory_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-svc
spec:
  type: ClusterIP
  selector:
    app: inventory
    version: v1
  ports:
  - port: 80
    targetPort: 80
