ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-main-svc
            port:
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-svc
            port:
              number: 80
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-svc
            port:
              number: 80
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-svc
            port:
              number: 80
      - path: /inventorys
        pathType: Prefix
        backend:
          service:
            name: inventory-svc
            port:
              number: 80
